@@ -18,3 +18,17 @@ external create: unit -> t = "caml_ml_mutex_new"
 external lock: t -> unit = "caml_ml_mutex_lock"
 external try_lock: t -> bool = "caml_ml_mutex_try_lock"
 external unlock: t -> unit = "caml_ml_mutex_unlock"
+
+(* private re-export *)
+external reraise : exn -> 'a = "%reraise"
+
+(* cannot inline, otherwise flambda might move code around. *)
+let[@inline never] protect m f =
+  lock m;
+  match f() with
+  | x ->
+    unlock m; x
+  | exception e ->
+    (* NOTE: [unlock] does not poll for asynchronous exceptions *)
+    unlock m;
+    reraise e
